# lcd-lcm1602-i2c

./: Cargo.toml  README.md
.github/workflows/: check.yml
src/: async_lcd.rs  lib.rs  sync_lcd.rs
